assets/scss/base/_variables.scss
// Font Path
$font-path: '/assets/fonts/';
$image-path: '/assets/images/';

// Colors - Misc
$white: #FFFFFF;
$black: #000000;
$wild-sand: #F6F6F6;
$gray-chateau: #9FA8AE;

// Accent
$yellow: #FFEB00;
$yellow-1: #FBC412;
$yellow-2: #FFE17E;

$green: #6DE354;
$green-1: #59BA47;
$green-2: #B8ECB6;

$red: #EE402D;
$red-1: #D12800;
$red-2: #FFBCB7;
$red-3: #FF7265;
$red-4: #FFD1CE;
$red-5: #EB3828;

$blue-accent: #60D4F2;
$blue-accent-1: #00C1FF;
$blue-accent-2: #A2DAF3;

// Colors - Primary
$blue-1: #1F5A95;
$blue-2: #006EB5;
$blue-3: #3288CE;
$blue-4: #4F95DD;
$blue-5: #6BABEB;
$blue-6: #94C4F5;
$blue-7: #B5D5F5;
$blue-8: #468AD8;

$dark-blue-1: #232E3E;
$dark-blue-2: #55606F;
$dark-blue-3: #A9B1B7;
$dark-blue-4: #D4D6D8;
$dark-blue-5: #EDEFF0;
$dark-blue-6: #F7F7F7;
$dark-blue-7: #FAFAFA;

// Additional blue/gray colors
$dark-blue-10: #9B9B9B;
$dark-blue-11: #E3E3E3;
$dark-blue-12: #707070;
$dark-blue-13: #454747;
$dark-blue-14: #656E7B;
$dark-blue-15: #EAEAEA;
$dark-blue-16: #CEC7C7;
$dark-blue-17: #4B5564;
$dark-blue-19: #CED0D3;

// Publication image background
$background-gray-1: #c9d0d6;
$background-gray-2: #9ea5ac;
$background-gray-3: #414648;
$background-gray-4: #7B8085;

//SDG Cards Colors
$sdg-1: #E4253A;
$sdg-1-hover: #C92034;
$sdg-2: #DEA83C;
$sdg-2-hover: #C49535;
$sdg-3: #4E9F38;
$sdg-3-hover: #43852E;
$sdg-4: #C51A2D;
$sdg-4-hover: #AB1628;
$sdg-5: #FF3C23;
$sdg-5-hover: #D1321D;
$sdg-6: #27BDE3;
$sdg-6-hover: #22A8C9;
$sdg-7: #FDC30A;
$sdg-7-hover: #E3B009;
$sdg-8: #A21843;
$sdg-8-hover: #8A153A;
$sdg-9: #FE6924;
$sdg-9-hover: #DB5A1F;
$sdg-10: #DE1568;
$sdg-10-hover: #C4125C;
$sdg-11: #FE9C25;
$sdg-11-hover: #E68E22;
$sdg-12: #BF8B2E;
$sdg-12-hover: #A67828;
$sdg-13: #3E8045;
$sdg-13-hover: #316636;
$sdg-14: #0C98DA;
$sdg-14-hover: #0B86BF;
$sdg-15: #58C12C;
$sdg-15-hover: #4EA827;
$sdg-16: #03689D;
$sdg-16-hover: #035785;
$sdg-17: #1A496B;
$sdg-17-hover: #143852;

// Fonts
$bold: 700;
$light: 300;
$medium: 500;
$regular: 400;
$semi-bold: 600;
$extra-bold: 800;
$primary-font: 'ProximaNova', sans-serif;
$secondary-font: 'SohneBreitTest', sans-serif;

// global margin and padding
$nav-mobile-height: 70px;
$nav-desktop-height: 115px;
$progress-bar-height: 17px;
$progress-bar-mobile-height: 15px;

// Z Index
$z-index-negative: -1;
$z-index-0: 0;
$z-index-1: 5;
$z-index-2: 10;
$z-index-3: 15;
$z-index-4: 20;
$z-index-5: 25;
$z-index-nav: 100;
$z-index-modal: 90;
$z-index-modal-nav-hover: 95;

// Transitions
$easing-1: .4s cubic-bezier(0.64, 0.05, 0.35, 1.05);
$easing-2: .2s cubic-bezier(0.4, 0.22, 0.28, 1);
$easing-3: 1.2s cubic-bezier(.34,.41,.03,1);
$easing-4: .2s cubic-bezier(.25,.27,.11,.99);

$transition-primary: all $easing-1;
$transition-expertise-image: all 0.5s ease-in-out;

